--- a/css/invie.css
+++ b/css/invie.css
@@ -1,3 +1,9 @@
+/*font-family: 'Montserrat', sans-serif;
+font-family: 'Allerta', sans-serif;*/
+
+body{
+	font-family: 'Allerta', sans-serif;
+}
 .titulo{
 	font-size: 70px;
 }
