--- a/css/invie.css
+++ b/css/invie.css
@@ -3,47 +3,54 @@ body{
 	font-family: 'Allerta', sans-serif;
 	margin: 0;
 }
-.titulo{
+
+button{
+	border-radius: 8px;
+	border: none;
+	background: #fd324e;
+	color: white;
+	padding: 7px;
+
+}
+.titulo {
 	font-family: 'Montserrat', sans-serif;
 	font-size: 70px;
 	margin-bottom: 0;
 	margin-top: 70px;
 }
-.title-a{
+.title-a {
 	font-size: 24px;
 	margin-top: 0;
 }
-.title-b{
-	font-size: 50px
+.title-b {
+	font-size: 50px;
 	margin-bottom:20px;
 }
 
-.guitarras{
-	color:#1F313C;
-	width: 800px;
-	margin: auto;
+.guitarras {
+	color:#1F313C;	
 }
 
-.guitarras h2{
+.guitarras h2 {
 	font-family: 'Montserrat', sans-serif;
 	font-size:35px;
 }
 
-.portada{
-	background-image: url(../images/background.png);
-	color:white;
+.portada {
+	background-image: url('../images/background.png');
+	color: white;
 	padding: 20px;
-	width: 800px;
-	margin: auto;
-}
+}	
 
-.portada button{
+.portada button {
 	margin-bottom: 70px; 
 }
 
 .menu{
 	font-size: 24px;
 	display: inline-block;
+	position: absolute;
+	right: 0;
 }
 
 .menu li{
@@ -54,7 +61,44 @@ body{
 .logotipo{
 	display: inline-block;
 }
-.header{
+
+.contenedor{
 	width: 800px;
 	margin: auto;
+}
+
+.guitarra{
+	padding: 10px;
+	margin: 10px;	
+	border: 1px solid #1F313C;
+	border-radius: 8px;
+}
+
+.guitarra ol{
+	padding: 0;
+}
+.derecha{
+	float: right;
+	position: relative;
+	top: -127px;
+}
+
+.izquierda{
+	float: left;
+	position: relative;
+	top: 80px;
+
+}
+
+.contenedor-guitarra-a{
+	padding-left: 20px;
+}
+
+.contenedor-guitarra-b{
+	margin-left: 370px;
+}
+
+.header{
+	position: relative;
+
 }
