página de precios terminada

--- a/css/invie.css
+++ b/css/invie.css
@@ -4,12 +4,50 @@ body{
 	margin: 0;
 }
 
+table{
+	width: 100%;
+}
+
+th{
+	background: #273b47;
+	color: white;
+}
+th{
+	padding: 10px 20px;
+	text-align: left;
+}
+
+td{
+	padding: 20px;
+}
+
+table, td ,th{
+	border: 1px solid #273b47;
+	border-collapse: collapse;
+}
+
+input, textarea{
+	outline: 0;
+}
+
+input:focus, textarea:focus{
+	background: lightgray;
+}
+
+.background{
+	background-image: url('../images/background.png');
+	background-size: cover;
+}
+
 .button{
 	border-radius: 8px;
 	border: none;
 	background: #fd324e;
 	color: white;
 	padding: 7px;
+	cursor: pointer;
+	font-size: 18px;
+	background: linear-gradient(to left, #fe344e, #ff7250);
 
 }
 .titulo {
@@ -17,6 +55,10 @@ body{
 	font-size: 70px;
 	margin-bottom: 0;
 	margin-top: 70px;
+}
+
+.titulo span{
+	text-decoration: underline;
 }
 .title-a {
 	font-size: 24px;
@@ -27,8 +69,15 @@ body{
 	margin-bottom:20px;
 }
 
+.contenedor{
+	width: 800px;
+	margin: auto;
+	position: relative;
+}
+
 .guitarras {
-	color:#1F313C;	
+	color:#1F313C;
+	margin-bottom: 	
 }
 
 .guitarras h2 {
@@ -37,13 +86,15 @@ body{
 }
 
 .portada {
-	background-image: url('../images/background.png');
+	
 	color: white;
 	padding: 20px;
 }	
 
 .portada button {
 	margin-bottom: 70px; 
+	
+
 }
 
 .menu{
@@ -53,29 +104,42 @@ body{
 	right: 0;
 }
 
+.menu a{
+	color: white;
+	text-decoration: none;
+}
+
 .menu li{
 	display: inline-block;
 	margin-left: 30px;
 }
 
-.logotipo{
-	display: inline-block;
+.menu li:before{
+	content:'o';
+	font-size: 50px;
+	line-height: 20px;
 }
 
-.contenedor{
-	width: 800px;
-	margin: auto;
+.logotipo{
+	display: inline-block;
+	margin-left: 0;
 }
+
+
 
 .guitarra{
 	padding: 10px;
-	margin: 10px;	
+	margin: 10px 10px 40px 10px;	
 	border: 1px solid #1F313C;
 	border-radius: 8px;
 }
 
 .guitarra ol{
 	padding: 0;
+}
+
+.guitarra.b{
+	height: 190px;
 }
 .derecha{
 	float: right;
@@ -86,7 +150,7 @@ body{
 .izquierda{
 	float: left;
 	position: relative;
-	top: 80px;
+	
 
 }
 
@@ -96,6 +160,8 @@ body{
 
 .contenedor-guitarra-b{
 	margin-left: 370px;
+	position: relative;
+	bottom: 90px;
 }
 
 .header{
@@ -105,6 +171,7 @@ body{
 
 .footer{
 	background: #273b47;
+	padding: 50px 10px;
 }
 .contacto{
 	display: flex;
@@ -134,7 +201,7 @@ body{
 	display: flex;
 	width: 400px;
 	color: white;
-	padding: 50px 10px;
+	
 }
 
 .col1, .col2{
@@ -150,6 +217,10 @@ body{
 	align-items: flex-start;
 }
 
+.col2 .button{
+	margin-top: 15px;
+}
+
 .intereses label{
 	font-size: 12px;
 }
@@ -158,6 +229,12 @@ body{
 	margin-bottom: 10px;
 }
 
+
+
 .sexo{
 	margin-top: 10px;
+}
+
+.tabla{
+	margin:50px 0;
 }
