--- a/css/invie.css
+++ b/css/invie.css
@@ -238,3 +238,56 @@ input:focus, textarea:focus{
 .tabla{
 	margin:50px 0;
 }
+
+@media screen and (max-width: 800px){
+	.contenedor{
+		width: auto;
+		max-width: 800px;
+	}
+
+	.titulo{
+		font-size: 45px;
+		margin-top: 30px;
+	}
+	.title-a{
+		font-size: 18px;
+	}
+	.portada{
+		height: auto;
+	}
+
+	.portada .button{
+		margin-bottom: 30px;
+		display: inline-block;
+	}
+
+	.guitarras{
+		text-align: center;
+		float: none;
+
+	}
+
+	.izquierda, .derecha{
+		float: none;
+		position: static;
+	}
+
+	.title-b{
+		margin: 0;
+
+	}
+
+	.guitarra li{
+		list-style: none;
+	}
+
+	.guitarra.b{
+		height: auto;
+
+	}
+
+	.contenedor-guitarra-b{
+		position: static;
+		margin: 0;
+	}
+}
