--- a/css/invie.css
+++ b/css/invie.css
@@ -70,7 +70,7 @@ input:focus, textarea:focus{
 }
 
 .contenedor{
-	width: 800px;
+	max-width: 800px;
 	margin: auto;
 	position: relative;
 }
@@ -89,6 +89,7 @@ input:focus, textarea:focus{
 	
 	color: white;
 	padding: 20px;
+	height: 500px;
 }	
 
 .portada button {
@@ -115,7 +116,7 @@ input:focus, textarea:focus{
 }
 
 .menu li:before{
-	content:'o';
+	content: '∘';
 	font-size: 50px;
 	line-height: 20px;
 }
@@ -240,10 +241,10 @@ input:focus, textarea:focus{
 }
 
 @media screen and (max-width: 800px){
-	.contenedor{
+	/*.contenedor{
 		width: auto;
 		max-width: 800px;
-	}
+	}*/
 
 	.titulo{
 		font-size: 45px;
@@ -290,4 +291,112 @@ input:focus, textarea:focus{
 		position: static;
 		margin: 0;
 	}
+
+	.contenedor-guitarra-a{
+		padding: 0;
+	}
+}
+
+@media screen and (max-width: 767px){
+
+	.footer .contenedor{
+		display: block;
+	}
+
+	.contacto{
+		margin: 0 auto;
+	}
+
+	.formulario{
+		display: block;
+		margin:0 auto;
+		width: 300px;
+	}
+
+	.intereses label{
+		display: block;
+		font-size: 16px;
+	}
+	.col1{
+		margin: 0;
+	}
+
+	input[type="text"],
+	input[type="email"]{
+		font-size: 16px;
+		padding: 5px;
+	}
+	input[type="radio"],
+	input[type="checkbox"]{
+		zoom:1.5;
+	}
+
+	textarea{
+		width: 100%;
+	}
+	
+}
+
+@media screen and (max-width: 650px){
+	
+	.header{
+		text-align:center;
+	}
+	.logotipo{
+		margin: 0;
+	}
+	.menu{
+		position: static;
+		display: block;		
+	}
+	.menu li:first-child{
+		margin: 0;
+	}
+	.menu ul{
+		padding: 0;
+	}
+
+}
+
+
+
+
+@media screen and (max-width: 500px){
+
+	.menu li{
+		display: block;	
+		margin: 0;
+		padding: 8px 0;
+		border-bottom: 1px solid white;
+	}
+	.menu li:before{
+		display: none;
+	}
+	.menu li:first-child{
+		border-top: 1px solid white; 
+	}
+	.portada{
+		text-align: center;
+	}
+	.titulo{
+		font-size: 30px;
+
+	}
+
+	.title{
+		font-size: 16px;
+	}
+
+	/*portada*/
+	/*guitarras*/
+	.guitarra img{
+		width: 200px;
+		/*height: auto;*/
+	}
+	.title-b{
+		font-size:30px;
+	}
+	/*guitarras*/
+
+
 }
